# epever-tracer-influxdb

./: .gitignore  CMakeLists.txt  README.md
cmake/: Findmodbus.cmake
debian/: changelog  control  copyright  files  install
scripts/: epeverTracer.conf  epeverTracer.sh  epeverTracerCron  epeverTracerInfluxdb
src/: EpeverTracer.c  EpeverTracer.h  main.c
test/: MockEpeverTracer.c  test_EpeverTracer.c
test/resources/: expected.txt  expectedallMetrics.txt
xr_usb_serial_common/: build_and_install.sh
